tests/ui/trait_definition/fail/cannot-apply-to-struct.rs
#[ink::trait_definition]
pub struct NotTrait;

fn main() {}
